WindGroup Dev/src/objects/Vaap_EVoucher_Reconciliation__c.object
<CustomObject>
    <description>This is used for Finance to reconciliation Vaap EVocher.</description>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Datetime__c</fullName>
        <label>Issue Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Reference_Number__c</fullName>
        <externalId>true</externalId>
        <label>Payment Reference Number</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <label>Property Short Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_to_Reconcile__c</fullName>
        <formula>AND(
TEXT(Payment_Mode__c)= TEXT(WireCard_Payment_Mode__c) ,  
Transaction_Amount__c =  WireCard_Amount__c ,   
TEXT(Currency_Code__c) = TEXT(WireCard_Currency_Code__c),
Transaction_Amount__c &gt;=0,
WireCard_Amount__c&gt;=0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready to Reconcile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconciled_Date__c</fullName>
        <label>Reconciled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WireCard_Amount__c</fullName>
        <label>WireCard Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WireCard_Currency_Code__c</fullName>
        <label>WireCard Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WireCard_Payment_Mode__c</fullName>
        <label>WireCard Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WireCard_Reference_Number__c</fullName>
        <label>WireCard Reference Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WireCard_Transaction_Datetime__c</fullName>
        <label>WireCard Transaction Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WireCard_Transaction_Status__c</fullName>
        <label>WireCard Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vaap EVoucher Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Reconciliation</fullName>
        <columns>Ready_to_Reconcile__c</columns>
        <columns>Reconciled_Date__c</columns>
        <columns>Payment_Reference_Number__c</columns>
        <columns>Issue_Datetime__c</columns>
        <columns>WireCard_Transaction_Datetime__c</columns>
        <columns>Quantity__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>WireCard_Amount__c</columns>
        <columns>Currency_Code__c</columns>
        <columns>WireCard_Currency_Code__c</columns>
        <columns>Payment_Mode__c</columns>
        <columns>WireCard_Payment_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reconciled_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Pending Reconciliation</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Reconciled</fullName>
        <columns>Ready_to_Reconcile__c</columns>
        <columns>Reconciled_Date__c</columns>
        <columns>Payment_Reference_Number__c</columns>
        <columns>Issue_Datetime__c</columns>
        <columns>WireCard_Transaction_Datetime__c</columns>
        <columns>Quantity__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>WireCard_Amount__c</columns>
        <columns>Currency_Code__c</columns>
        <columns>WireCard_Currency_Code__c</columns>
        <columns>Payment_Mode__c</columns>
        <columns>WireCard_Payment_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reconciled_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month Reconciled</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-VBR-{00000000}</displayFormat>
        <label>Vaap EVoucher Reco No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaap EVoucher Reconciliation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Vaap_Validate_Vaap_and_WireCard_Data</fullName>
        <active>true</active>
        <description>This is to check if Vaap and Wirecard data are matched before update on Reconciled Date.</description>
        <errorConditionFormula>AND( 
NOT(Ready_to_Reconcile__c),  
NOT(ISBLANK(Reconciled_Date__c))
)</errorConditionFormula>
        <errorMessage>Vaap and WireCard data are not matched. Please review and amend before Reconcile.</errorMessage>
    </validationRules>
</CustomObject>